--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fullcalendar/core": "^6.1.14",
+    "@fullcalendar/daygrid": "^6.1.14",
+    "@fullcalendar/interaction": "^6.1.14",
     "mongodb": "^6.7.0",
     "next": "14.2.3",
     "react": "^18",
+    "react-calendar": "^5.0.0",
     "react-dom": "^18"
   },
   "devDependencies": {
