--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@fullcalendar/core": "^6.1.14",
     "@fullcalendar/daygrid": "^6.1.14",
     "@fullcalendar/interaction": "^6.1.14",
+    "axios": "^1.7.2",
     "mongodb": "^6.7.0",
     "next": "14.2.3",
     "react": "^18",
