--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mui/icons-material": "^5.15.19",
     "@mui/material": "^5.15.19",
     "axios": "^1.7.2",
+    "intl-dateformat": "^0.1.4",
     "mongodb": "^6.7.0",
     "next": "14.2.3",
     "react": "^18",
